# Tensor

./: .gitignore  CMakeLists.txt  a.out  main.cpp  makefile  simd.h  tensor.h  vec.h  vector.hpp
core/: avx.h  core.h  linux.h  macros.h  naive.h  sse.h  windows.h
simd/: avx.h  sse.h  types.h
src/: main.cpp  vec.h
src/core/: core.h  types.h
src/core/handlers/: avx.h  naive.h  sse.h
src/core/simd/: avx.h  sse.h
src/matrix/: cl.h  matrix.h
src/tensor/: tensor.h
